# workflow-server

./: .gitignore  Cargo.toml  README.md
.config/: app.toml
apily-cli/: .gitignore  Cargo.toml
apily-cli/.config/: app.toml
apily-cli/.config/certs/public/: intermediate.pub  root.pub
apily-cli/src/: main.rs
apily-cli/src/certs/: mod.rs  params.rs  write.rs
apily-cli/src/cli/: certificates.rs  mod.rs  setup_command.rs  start_command.rs
apily-cli/src/config/: mod.rs  server.rs
attempts/one/: README.md
attempts/one/src/: main.rs
attempts/one/src/commands/: test_command.rs
attempts/two/: .gitignore
attempts/two/.config/: app.toml
attempts/two/assets/: 404.html  up.html
attempts/two/src/: main.rs
attempts/two/src/certs/: write.rs
attempts/two/src/cli/: certificates.rs  mod.rs  setup_command.rs  start_command.rs  validators.rs
attempts/two/src/config/: mod.rs  server.rs
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  main.rs
cli/src/commands/: mod.rs  start.rs
cli/src/commands/setup/: host_cert.rs  mod.rs  show_config.rs
docs/: services.md  trading-partners.md
lib/certs/: Cargo.toml
lib/certs/src/: config.rs  lib.rs  params.rs  write.rs
lib/certs/src/ca/: mod.rs  params.rs
lib/model/src/: lib.rs
lib/server/: Cargo.toml
lib/server/src/: config.rs  lib.rs
lib/utils/src/: lib.rs  validators.rs
spike/src/: threading.rs
spike/src/certs/: write.rs
spike/src/db/: mod.rs
spike/www/: up.html
src/: main.rs  threading.rs
src/certs/: mod.rs  params.rs  write.rs
src/cli/: config.rs  mod.rs  start.rs  validators.rs
src/cli/setup/: certificates.rs  mod.rs
src/commands/: mod.rs  setup_command.rs  start_command.rs  validators.rs
src/server/: mod.rs
www/: 404.html
