[package]
name = "workflow-server"
about = "Workflow automation server management CLI"
authors = ["Gruff <gruff@apily.co.uk>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo"] }
rcgen = "0.10.0"
surrealdb = "1.0.0-beta.8"
time = "0.3.20"
toml = "0.7.3"
