[package]
name = "apily"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
clap = { version = "4.2.1", features = ["derive", "cargo"] }
rcgen = "0.10.0"
serde = { version = "1.0.159", features=["derive"] }
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
