# [package]
# name = "conductor"
# version = "0.1.0"
# authors = ["Gruff <gruff@apily.co.uk>"]
# edition = "2021"
# description = "workflow automation server for electronic file exchange"
# license = "MIT"
#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
 members = [ "cli", "lib/certs", "lib/server", "lib/utils" ]
