[package]
name = "apily-cli"
about = "Workflow automation server management CLI"
authors = ["Gruff <gruff@apily.co.uk>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive", "cargo"] }
serde = { version = "1.0.158", features = ["derive"] }
toml = "0.7.3"
