[package]
name = "apily-cli"
about = "Workflow automation server management CLI"
authors = ["Gruff <gruff@apily.co.uk>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6" 
clap = { version = "4", features = ["derive", "cargo"] }
rcgen = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
time = "0.3"
tokio = { version = "1", features= ["full"] }
